# XaulinXs-LatinIME

./: README.md  build.gradle  build.gradle.txt  gradle.properties
.github/workflows/: build.yml
java/: AndroidManifest.xml
java/res/layout/: emoji_palettes_view.xml  suggestions_strip.xml  xaulinxs_clipboard_item.xml  xaulinxs_clipboard_panel.xml  xaulinxs_color_picker_dialog.xml  xaulinxs_customization_activity.xml  xaulinxs_filemanager_activity.xml  xaulinxs_filemanager_item.xml  xaulinxs_voice_overlay.xml
java/res/values/: strings.xml
java/res/xml/: prefs_screen_appearance.xml
java/src/com/android/inputmethod/keyboard/: KeyboardView.java
java/src/com/android/inputmethod/keyboard/emoji/: EmojiPalettesView.java
java/src/com/android/inputmethod/keyboard/internal/: KeyPreviewView.java
java/src/com/android/inputmethod/latin/: LatinIME.java
java/src/com/android/inputmethod/latin/suggestions/: SuggestionStripView.java
java/src/com/xaulinxs/clipboard/: ClipboardHistoryItem.java  ClipboardHistoryManager.java  ClipboardPanelView.java
java/src/com/xaulinxs/customization/: CustomizationPrefs.java  CustomizationSettingsActivity.java  FontFileManagerActivity.java  StoragePermissionHelper.java
java/src/com/xaulinxs/voice/: VoiceInputManager.java  VoiceInputOverlayView.java  VoicePermissionActivity.java
native/jni/: CMakeLists.txt
tests/: AndroidManifest.xml
